# CFD-Solver

./: .gitignore  cfd-2D-solver-v1.ipynb  cfd-2D-solver-v2.ipynb  cfd-2D-solver-v3.ipynb  channel-solver.ipynb  compare_runs.ipynb  exec_plotting.ipynb  ghia_ref_u.csv  lid_analysis.ipynb  lid_solver-ADI.ipynb  lid_solver-RK.ipynb  lid_solver-check-diff.ipynb  lid_solver-opti.ipynb  lid_solver.ipynb  perf.data  perf.data.old  poisson_solver.ipynb  pyproject.toml  solver1.py  understanding-navier-stokes.ipynb
C/: CMakeLists.txt  Untitled1.ipynb  analyse_c_out.ipynb  analysis.txt  main.c  pino_create_dataset.ipynb  plot_run.py  simu_manager.ipynb  simu_reader.py  simulation.ini  tridiag_test.ipynb
poisson/: poisson_cython.ipynb  poisson_perf.ipynb  poisson_solver.ipynb  pressure_mg.ipynb
