[project]
name = "cfd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.9.21",
    "huggingface-hub>=1.3.3",
    "ipympl>=0.9.8",
    "ipython>=9.8.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "napari[pyqt6]>=0.6.6",
    "plotly>=6.5.2",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
]
