[project]
name = "cfd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.9.21",
    "cython>=3.2.4",
    "huggingface-hub>=1.3.3",
    "ipympl>=0.9.8",
    "ipython>=9.8.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab-lsp>=5.2.0",
    "matplotlib>=3.10.8",
    "napari[all]>=0.6.6",
    "plotly>=6.5.2",
    "posix-ipc>=1.3.2",
    "pyinstrument>=5.1.2",
    "python-lsp-server>=1.14.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "snakeviz>=2.2.2",
    "tqdm>=4.67.1",
]
