[project]
name = "cfd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.9.21",
    "boto3>=1.42.59",
    "cython>=3.2.4",
    "huggingface-hub>=1.3.3",
    "ipycanvas>=0.14.3",
    "ipympl>=0.9.8",
    "ipython>=9.8.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab-lsp>=5.2.0",
    "jupyterlab-widgets>=3.0.16",
    "matplotlib>=3.10.8",
    "napari[all]>=0.6.6",
    "optuna>=4.7.0",
    "plotly>=6.5.2",
    "posix-ipc>=1.3.2",
    "pyinstrument>=5.1.2",
    "pyqt6>=6.10.2",
    "pyqtgraph>=0.14.0",
    "python-lsp-server>=1.14.0",
    "s3fs>=0.4.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "snakeviz>=2.2.2",
    "tqdm>=4.67.1",
]
